--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
   }
 }
 @media only screen and (max-width: 800px) {
+  .dice {
+    height: 50vw;
+    width: auto;
+  }
   .dices {
     display: grid;
     grid-template-columns: 1fr;
